--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                     id="new_expense_show"
                     data-bind="
                     visible: tempExpenseForm().notVisibile,
-                    click: tempExpenseForm().show">
+                    click: $root.newExpenseForm">
                         <i class="icon-plus"></i> add expense&hellip;
                     </button>
                 </div>
