--- a/public/index.html
+++ b/public/index.html
@@ -140,8 +140,8 @@
                         </div>
                         <div>
                             <span class="description" data-bind="text: description"></span
-                            ><span class="share_value" data-bind="visible: spent_for !== 1">
-                                <span class="money" data-bind="text: formattedCurrency(amount)"></span>
+                            ><span class="share_value" data-bind="visible: spent_for === 1">
+                                <span class="money" data-bind="text: formattedCurrency(amount / $root.numberOfPeople())"></span>
                                 <span class="trivial_word">each</span>
                             </span>
                         </div>
