--- a/public/index.html
+++ b/public/index.html
@@ -126,16 +126,16 @@
                     </div>
                 </form>
                 <div id="expense_group" data-bind="foreach: expenses">
-                    <div class="expense_item">
+                    <div class="expense_item" data-bind="css: 'color_' + payer">
                         <div>
                             <span class="money"><span data-bind="text: formattedCurrency(amount)"></span></span>
                             <span class="trivial_word">on</span>
                             <span data-bind="text: formattedDate(date)"></span>
                             <span class="trivial_word">by</span>
-                            <span data-bind="text: $root.nameForId(payer)"></span>
+                            <span class="payer" data-bind="css: 'color_' + payer, text: $root.nameForId(payer)"></span>
                             <span data-bind="visible: spent_for !== 1">
                                 <span class="trivial_word">for</span>
-                                <span data-bind="text: $root.nameForId(spent_for)"></span>
+                                <span class="spent_for" data-bind="css: 'color_' + spent_for, text: $root.nameForId(spent_for)"></span>
                             </span>
                         </div>
                         <div>
