--- a/public/index.html
+++ b/public/index.html
@@ -38,46 +38,32 @@
             <span class="clearfix"></span>
         </div>
         <div id="column_container">
-            <!-- <div id="debts" class="column" data-bind="-->
-            <!-- visible: currentTab() === 'debts',-->
-            <!-- foreach: []">-->
-            <!--     <h1-->
-            <!--     colspan="2"-->
-            <!--     data-bind="-->
-            <!--     text: $data[0].debtor + ' owes',-->
-            <!--     css: 'color_' + $data[0].debtor"></h1>-->
-            <!--     <div class="floaty_container">-->
-            <!--         <table class="summary">-->
-            <!--             <tbody data-bind="foreach: $data">-->
-            <!--                 <tr>-->
-            <!--                     <td class="money" data-bind="text: formattedCurrency(amount)"></td>-->
-            <!--                     <td><div class="color_left" data-bind="text: debtee, css: 'color_' + debtee"></div></td>-->
-            <!--                 </tr>-->
-            <!--             </tbody>-->
-            <!--         </table>-->
-            <!--     </div>-->
-            <!-- </div>-->
+            <div id="debts" class="column" data-bind="
+                visible: currentTab() === 'debts',
+                foreach: []"
+                >
+                debts
+            </div>
             <div id="expenses" class="column" data-bind="visible: $root.currentTab() === 'expenses'">
-                <div class="main_margin">
-                    <button
+                <button
                     type="button"
                     class="form_toggle"
                     id="new_expense_show"
                     data-bind="
                     visible: tempExpenseForm().notVisibile,
-                    click: $root.newExpenseForm">
-                        <i class="icon-plus"></i> add expense&hellip;
-                    </button>
-                </div>
+                    click: $root.newExpenseForm"
+                    >
+                    <i class="icon-plus"></i> add expense&hellip;
+                </button>
                 <form
-                action=""
-                id="expense_form"
-                class="floaty_container"
-                data-bind="
-                with: tempExpenseForm,
-                submit: saveTempExpense,
-                visible: tempExpenseForm().visible">
-                    </button>
+                    action=""
+                    id="expense_form"
+                    class="floaty_container"
+                    data-bind="
+                    with: tempExpenseForm,
+                    submit: saveTempExpense,
+                    visible: tempExpenseForm().visible"
+                    >
                     <div class="field">
                         <span class="trivial_word">who</span>
                         <select data-bind="
@@ -121,8 +107,8 @@
                         data-bind="value: description">
                     </div>
                     <div class="button_group">
-                        <button id="add_button" type="submit"><i class="icon-plus"></i> Add</button>
-                        <button id="cancel_button" data-bind="event: { click: hide }" type="button"><i class="icon-close"></i> Cancel</button>
+                        <button class="add" type="submit"><i class="icon-plus"></i> Add</button>
+                        <button class="cancel" data-bind="event: { click: hide }" type="button"><i class="icon-close"></i> Cancel</button>
                     </div>
                 </form>
                 <div id="expense_group" data-bind="foreach: expenses">
@@ -147,6 +133,39 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div id="payments" class="column" data-bind="visible: currentTab() === 'payments'">
+                <button
+                    type="button"
+                    class="form_toggle"
+                    id="new_payment_show"
+                    data-bind="
+                    visible: true,
+                    click: noop"
+                    >
+                    <i class="icon-plus"></i> add payment&hellip;
+                </button>
+                <form
+                    action=""
+                    id="expense_form"
+                    class="floaty_container"
+                    data-bind="
+                    with: {},
+                    submit: noop,
+                    visible: true"
+                    >
+                    <div class="field">
+                        <span class="trivial_word">spam</span>
+                        <input
+                        type="text"
+                        placeholder="spam, spam, spam"
+                        data-bind="value: ''">
+                    </div>
+                    <div class="button_group">
+                        <button class="add" type="submit"><i class="icon-plus"></i> Add</button>
+                        <button class="cancel" type="button"><i class="icon-close"></i> Cancel</button>
+                    </div>
+                </form>
             </div>
         </div>
     </body>
